Reworking Lib Config
Moved all referenced libs into a lib folder under project root.
Added the vm arguments necessary for the Eclipse run configuration to the README.

NOTE: You should add a set of default username/password combos to the README to support testing.