@@ -1,1 +1,5 @@
 # MightyVocab
+
+## Run Configuration
+--module-path "./lib/javafx-sdk-18.0.1/lib"
+--add-modules javafx.controls,javafx.fxml
